[package]
name = "krossbar-settings-common"
version = "0.5.4"
readme = "README.md"
description = """
Krossbar settings common library
"""
categories = ["configuration"]
keywords = ["settings", "configuration"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
tempdir = { workspace = true }
