[package]
name = "krossbar-settings-lib"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-settings"
homepage = "https://krossbar.rs"
description = """
Krossbar settings library
"""
categories = ["configuration"]
keywords = ["settings", "configuration"]


[dependencies]
bson = "2.3"
serde = "1.0"

karo-storage-common = { path = "../karo-storage-common" }

[dev-dependencies]
tempdir = "0.3.7"
