[package]
name = "krossbar-settings-lib"
version = "0.5.1"
readme = "README.md"
description = """
Krossbar settings library
"""
categories = ["configuration"]
keywords = ["settings", "configuration"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }

krossbar-settings-common = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
