[package]
name = "krossbar-settings-viewer"
version = "0.5.1"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-settings"
homepage = "https://krossbar.rs"
description = """
Krossbar settings viewer
"""
categories = ["configuration"]
keywords = ["settings", "configuration"]

[dependencies]
clap = { version = "3.2", features = ["derive", "color"] }
colored = "2.0.0"
serde_json = "1.0"

krossbar-settings-common = "0.5.3"
