[package]
name = "krossbar-settings-viewer"
version = "0.5.1"
readme = "README.md"
description = """
Krossbar settings viewer
"""
categories = ["configuration"]
keywords = ["settings", "configuration"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "3.2", features = ["derive", "color"] }
colored = "2.0.0"
serde_json = { workspace = true }

krossbar-settings-common = { workspace = true }
